--- a/index.html
+++ b/index.html
@@ -45,47 +45,47 @@
             <h2>Thiago Eduardo Honorio Bueno</h2>
           </div>
           <div class="w3-container">
-            <p><i class="fa fa-briefcase fa-fw w3-margin-right w3-large w3-text-teal"></i>Professor de informática</p>
-            <p><i class="fa fa-home fa-fw w3-margin-right w3-large w3-text-teal"></i>Taubaté-SP, Brazil</p>
-            <p><i class="fa fa-envelope fa-fw w3-margin-right w3-large w3-text-teal"></i>thiagobueno1933@gmail.com</p>
-            <p><i class="fa fa-phone fa-fw w3-margin-right w3-large w3-text-teal"></i>+55 (12) 98233-2422</p>
+            <p><i class="fa fa-briefcase fa-fw w3-margin-right w3-large w3-text-indigo"></i>Professor de informática</p>
+            <p><i class="fa fa-home fa-fw w3-margin-right w3-large w3-text-indigo"></i>Taubaté-SP, Brazil</p>
+            <p><i class="fa fa-envelope fa-fw w3-margin-right w3-large w3-text-indigo"></i>thiagobueno1933@gmail.com</p>
+            <p><i class="fa fa-phone fa-fw w3-margin-right w3-large w3-text-indigo"></i>+55 (12) 98233-2422</p>
             <hr>
 
             <p class="w3-large">
-              <b><i class="fa fa-asterisk fa-fw w3-margin-right w3-text-teal"></i>Skills</b>
+              <b><i class="fa fa-asterisk fa-fw w3-margin-right w3-text-indigo"></i>Skills</b>
             </p>
             <p>HTML5</p>
             <div class="w3-light-grey w3-round-xlarge w3-small">
-              <div class="w3-container w3-center w3-round-xlarge w3-teal" style="width:100%">100%</div>
+              <div class="w3-container w3-center w3-round-xlarge w3-indigo" style="width:100%">100%</div>
             </div>
             <p>CSS3</p>
             <div class="w3-light-grey w3-round-xlarge w3-small">
-              <div class="w3-container w3-center w3-round-xlarge w3-teal" style="width:80%">80%</div>
+              <div class="w3-container w3-center w3-round-xlarge w3-indigo" style="width:80%">80%</div>
             </div>
             <p>JavaScript</p>
             <div class="w3-light-grey w3-round-xlarge w3-small">
-              <div class="w3-container w3-center w3-round-xlarge w3-teal" style="width:30%">30%</div>
+              <div class="w3-container w3-center w3-round-xlarge w3-indigo" style="width:30%">30%</div>
             </div>
             <p>Python</p>
             <div class="w3-light-grey w3-round-xlarge w3-small">
-              <div class="w3-container w3-center w3-round-xlarge w3-teal" style="width:30%">30%</div>
+              <div class="w3-container w3-center w3-round-xlarge w3-indigo" style="width:30%">30%</div>
             </div>
             <br>
 
             <p class="w3-large w3-text-theme">
-              <b><i class="fa fa-globe fa-fw w3-margin-right w3-text-teal"></i>Idiomas</b>
+              <b><i class="fa fa-globe fa-fw w3-margin-right w3-text-indigo"></i>Idiomas</b>
             </p>
             <p>Português</p>
             <div class="w3-light-grey w3-round-xlarge">
-              <div class="w3-round-xlarge w3-teal" style="height:24px;width:100%"></div>
+              <div class="w3-round-xlarge w3-indigo" style="height:24px;width:100%"></div>
             </div>
             <p>Inglês</p>
             <div class="w3-light-grey w3-round-xlarge">
-              <div class="w3-round-xlarge w3-teal" style="height:24px;width:50%"></div>
+              <div class="w3-round-xlarge w3-indigo" style="height:24px;width:50%"></div>
             </div>
             <p>Espanhol</p>
             <div class="w3-light-grey w3-round-xlarge">
-              <div class="w3-round-xlarge w3-teal" style="height:24px;width:40%"></div>
+              <div class="w3-round-xlarge w3-indigo" style="height:24px;width:40%"></div>
             </div>
             <br>
           </div>
@@ -99,7 +99,7 @@
 
         <div class="w3-container w3-card w3-white w3-margin-bottom">
           <h2 class="w3-text-grey w3-padding-16"><i
-              class="fa fa-terminal fa-fw w3-margin-right w3-xxlarge w3-text-teal"></i>Sobre</h2>
+              class="fa fa-terminal fa-fw w3-margin-right w3-xxlarge w3-text-indigo"></i>Sobre</h2>
           <p>Cursando análise e desenvolvimento de sistemas na Fatec Taubaté. Proativo e autodidata. Gosto de aprender
             coisas novas sobre as mais diversas áreas. Principalmente qual se obtém adversidades e aprendizado contínuo.
           </p>
@@ -107,30 +107,30 @@
 
         <div class="w3-container w3-card w3-white w3-margin-bottom">
           <h2 class="w3-text-grey w3-padding-16">
-            <i class="fa fa-suitcase fa-fw w3-margin-right w3-xxlarge w3-text-teal"></i>Experiências
+            <i class="fa fa-suitcase fa-fw w3-margin-right w3-xxlarge w3-text-indigo"></i>Experiências
           </h2>
           <div class="w3-container">
             <h5 class="w3-opacity"><b>Fundação Caixa Beneficente dos Servidores da Universidade de Taubaté (Funcabes)</b></h5>
-            <h6 class="w3-text-teal"><i class="fa fa-calendar fa-fw w3-margin-right"></i>Setembro 2022 - <span
-                class="w3-tag w3-teal w3-round">Atual</span></h6>
+            <h6 class="w3-text-indigo"><i class="fa fa-calendar fa-fw w3-margin-right"></i>Setembro 2022 - <span
+                class="w3-tag w3-indigo w3-round">Atual</span></h6>
             <p>Ensinar os alunos sobre computação, sendo o básico de como manusear mouse e teclado, Pacote Office, HTML, CSS básico e Algoritmos utilizando VisualG</p>
             <hr>
           </div>
           <div class="w3-container">
             <h5 class="w3-opacity"><b>Fundação Caixa Beneficente dos Servidores da Universidade de Taubaté (Funcabes)</b></h5>
-            <h6 class="w3-text-teal"><i class="fa fa-calendar fa-fw w3-margin-right"></i>Novembro 2021 - Agosto 2022</h6>
+            <h6 class="w3-text-indigo"><i class="fa fa-calendar fa-fw w3-margin-right"></i>Novembro 2021 - Agosto 2022</h6>
             <p>Auxiliar alunos de inclusão de acordo com suas necessidades e auxiliar na organização da escola.</p>
           </div>
         </div>
 
         <div class="w3-container w3-card w3-white">
           <h2 class="w3-text-grey w3-padding-16">
-            <i class="fa fa-graduation-cap fa-fw w3-margin-right w3-xxlarge w3-text-teal"></i>Educação
+            <i class="fa fa-graduation-cap fa-fw w3-margin-right w3-xxlarge w3-text-indigo"></i>Educação
           </h2>
           <div class="w3-container">
             <h5 class="w3-opacity"><b>Digital Innovation One (DIO)</b></h5>
-            <h6 class="w3-text-teal"><i class="fa fa-calendar fa-fw w3-margin-right"></i>Março 2023 - <span
-                class="w3-tag w3-teal w3-round">Atual</span></h6>
+            <h6 class="w3-text-indigo"><i class="fa fa-calendar fa-fw w3-margin-right"></i>Março 2023 - <span
+                class="w3-tag w3-indigo w3-round">Atual</span></h6>
             <p>
               Maior plataforma de educação aberta em TI da América Latina, com mais 1 milhão de usuários.
               A DIO possui parcerias com algumas das empresas mais inovadoras do mundo, proporcionando experiências
@@ -145,17 +145,17 @@
           </div>
           <div class="w3-container">
             <h5 class="w3-opacity"><b>Faculdade de tecnologia de Taubaté (Fatec)</b></h5>
-            <h6 class="w3-text-teal"><i class="fa fa-calendar fa-fw w3-margin-right"></i>2019 - 2023</h6>
+            <h6 class="w3-text-indigo"><i class="fa fa-calendar fa-fw w3-margin-right"></i>2019 - 2023</h6>
             <p>Tecnólogo em Análise e desenvolvimento de sistemas</p>
           </div>
         </div>
 
         <div class="w3-container w3-card w3-white w3-margin-bottom">
           <h2 class="w3-text-grey w3-padding-16">
-            <i class="fa fa-git fa-fw w3-margin-right w3-xxlarge w3-text-teal"></i>Projetos
+            <i class="fa fa-git fa-fw w3-margin-right w3-xxlarge w3-text-indigo"></i>Projetos
           </h2>
           <div class="w3-container">
-            <h6 class="w3-text-teal">
+            <h6 class="w3-text-indigo">
               <i class="fa fa-github fa-fw w3-margin-right"></i>
               <a href="https://github.com/ThiagoEHBueno/IfoodPokedex" target="_blank">ThiagoEHBueno/IfoodPokedex</a>
             </h6>
@@ -163,7 +163,7 @@
             <hr>
           </div>
           <!--<div class="w3-container">
-            <h6 class="w3-text-teal">
+            <h6 class="w3-text-indigo">
               <i class="fa fa-gitlab fa-fw w3-margin-right"></i>
               <a href="LINK_GITLAB" target="_blank">USUARIO_GITLAB/REPO</a>
             </h6>
@@ -180,7 +180,7 @@
     <!-- End Page Container -->
   </div>
 
-  <footer class="w3-container w3-teal w3-center w3-margin-top">
+  <footer class="w3-container w3-indigo w3-center w3-margin-top">
     <p>Minhas Redes Sociais</p>
     <a href="https://github.com/ThiagoEHBueno" target="_blank"><i class="fa fa-github w3-hover-opacity"></i></a>
     <a href="https://www.linkedin.com/in/thiago-bueno-755244203/" target="_blank"><i class="fa fa-linkedin w3-hover-opacity"></i></a>
